# file-sharer

./: Cargo.toml  LICENCE  README.md
src/: admin_app.rs  controller.rs  main.rs  timestamp.rs  user_app.rs
templates/: admin.html  admin_share.html  admin_upload.html  user_share_directory_listing.html  user_upload.html  user_upload_success.html
