[package]
name = "file-sharer"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
askama = { version = "0.11", features = [ "with-axum" ] }
askama_axum = "0.1"
axum = { version = "0.5", features = [ "headers", "multipart" ] }
axum-extra = { version = "0.2", features = [ "typed-routing" ] }
chrono = { version = "0.4", features = [ "serde" ] }
futures-util = "0.3"
mime_guess = "2.0"
percent-encoding = "2.1"
rand = "0.8"
serde = { version = "1.0", features = [ "derive" ] }
tokio = { version = "1.17", features = [ "rt", "io-util", "macros", "sync", "signal", "fs" ] }
toml = "0.5"
tower-http = { version = "0.2", features = [ "fs" ] }
tracing = "0.1"
tracing-subscriber = "0.3"
